--- a/apps/customer/src/app/components/ui/navbar/styles/navbarstyle.sass
+++ b/apps/customer/src/app/components/ui/navbar/styles/navbarstyle.sass
@@ -1,3 +1,7 @@
 nav
     display: flex
+    position: fixed
+    z-index: 10
     justify-content: space-around
+    width: 100%
+    background: white
